<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/login_data">
        <CheckBoxPreference
            android:key="autologin"
            android:title="@string/enable_autologin"
            android:summary="@string/autologin_sum"/>
        <EditTextPreference
            android:key="username"
            android:singleLine="true"
            android:title="@string/username" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="password"
            android:singleLine="true"
            android:title="@string/password" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="security"
            android:summary="@string/security_sum"
            android:title="@string/extra_security" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/timeout_options">
        <CheckBoxPreference
            android:key="timeout"
            android:title="@string/norm_timeout"
            android:defaultValue="false"
            android:summary="@string/norm_timeout_sum"/>
        <CheckBoxPreference
            android:key="stamina"
            android:title="@string/adv_timeout"
            android:defaultValue="true"
            android:summary="@string/adv_timeout_sum"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/manual">
        <Preference
            android:key="manual_login"
            android:title="@string/login_now" />
        <Preference
            android:key="open_login_page"
            android:title="@string/open_login_page" />
        <Preference
            android:key="connect"
            android:title="@string/connect_to_kfg" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/info">
        <Preference
            android:key="about"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>
